<resources>

    <string name="app_version">V1.0.2</string>
    <string name="app_name">Quick Dial</string>
   <string name="guide_title1">High Speed Dial</string>
    <string name="guide_title2">Only by sliding your finger.</string>
    <string name="guide_title3">Cool and Rich</string>
    <string name="guide_content1">How to dial, just by yourself.</string>
    <string name="guide_content2">Easy to Manage</string>
    <string name="guide_content3">Not only quick dial, but also contacts.</string>
    <string name="start">Click to start >>></string>
    <string name="select_phone_number">Select Phone Number</string>
    <string name="select_email_address">Select Email Address</string>
    <string name="select_url_address">Select URL Address</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_join">Join</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_upload">OK</string>
    <string name="phone_tag_extension">Extension</string>
    <string name="phone_tag2_assistant">Assistant</string>
    <string name="phone_tag2_callback">Callback</string>
    <string name="phone_tag2_company_main">Company Main</string>
    <string name="phone_tag2_car">Car</string>
    <string name="phone_tag_fax_work">Fax Work</string>
    <string name="phone_tag_fax_home">Fax Home</string>
    <string name="phone_tag_home">Home</string>
    <string name="phone_tag2_isdn">ISDN</string>
    <string name="phone_tag2_main">Main</string>
    <string name="phone_tag2_mms">MMS</string>
    <string name="phone_tag_mobile">Mobile</string>
    <string name="phone_tag_other">Other</string>
    <string name="phone_tag2_other_fax">Other Fax</string>
    <string name="phone_tag_pager">Pager</string>
    <string name="phone_tag2_radio">Radio</string>
    <string name="phone_tag2_telex">Telex</string>
    <string name="phone_tag2_tty_tdd">TTY TDD</string>
    <string name="phone_tag_work">Work</string>
    <string name="phone_tag2_work_mobile">Work Mobile</string>
    <string name="phone_tag2_work_pager">Work Pager</string>
    <string name="phone_tag_custom">Custom</string>
    <string name="email_tag_home">Home</string>
    <string name="email_tag_mobile">Mobile</string>
    <string name="email_tag_work">Work</string>
    <string name="email_tag_other">Other</string>
    <string name="email_tag_custom">Custom</string>
    <string name="address_tag_home">Home</string>
    <string name="address_tag_work">Work</string>
    <string name="address_tag_other">Other</string>
    <string name="select_contact">SELECT CONTACT</string>
    <string name="select_contact_no_contact_title">No Phone</string>
    <string name="select_contact_no_contact_message">There are no valid phone number you can select.</string>
    <string name="title_select_contact">Select Contact</string>
    <string name="title_contact_info">Contact Info</string>
    <string name="title_contacts">Contacts</string>
    <string name="contact_info">CONTACT INFO</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="no_contact_info">NO CONTACT INFO</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="no_contacts">No contacts</string>
    <string name="no_call_log">No call log</string>
    <string name="no_quick_call">No quick dial</string>
    <string name="it_is_too_short">It is too short.</string>
    <string name="update_quick_call_success">Update quick dial success.</string>
    <string name="create_quick_call_success">Create quick dial success.</string>
    <string name="quick_call_no_change">No changes of this quick dial.</string>
    <string name="menu_editContact">Edit Contact</string>
    <string name="menu_newContact">Create New Contact</string>
    <string name="menu_addContact">Add to Existing Contact</string>
    <string name="menu_sendEmail">Send Email</string>
    <string name="contact_exists">Contact exists</string>
    <string name="contact_exists_message">%1$s(%2$s) has existed in native contacts.</string>
    <string name="call_error_title">Call Error</string>

    <!-- long click contact menu item -->
    <string name="long_click_contact_create_new_quick_call">Create New Quick Dial</string>
    <string name="long_click_contact_call_contact">Call Contact</string>
    <string name="long_click_contact_send_message">Send Message</string>
    <string name="long_click_contact_view_contact">View Contact</string>
    <string name="long_click_contact_send_email">Send Email</string>
    <string name="long_click_contact_edit_contact">Edit Contact</string>
    <string name="long_click_contact_delete_contact">Delete</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_message">Do you want to delete selected contact(s)?</string>
    <string name="delete_contact_failed_title">Delete Failed.</string>
    <string name="delete_contact_failed">Sorry, delete contact(s) failed. Please try again.</string>
    <string name="delete_quick_message">Do you want to delete this quick dial?</string>
    <string name="history">History</string>
    <string name="unsaved">Unsaved</string>
    <string name="history_info">Calllog Info</string>
    <string name="history_detail_view_contact">View Contact</string>
    <string name="history_detail_call_contact">Call Contact</string>
    <string name="history_detail_send_message">Send Message</string>
    <string name="popup_text_create_new_message">Create New Message</string>
    <string name="popup_text_edit">Edit Message</string>
    <string name="popup_text_clear_all">Clear All</string>
    <string name="popup_text_edit_history">Edit History</string>
    <string name="popup_text_view_contact">View Contact</string>
    <string name="popup_text_call_contact">Call Contact</string>
    <string name="popup_text_create_new_contact">Create New Contact</string>
    <string name="popup_text_add_to_existing_contact">Add To Existing Contact</string>
    <string name="popup_text_clear_this_history">Clear This History</string>
    <string name="popup_text_delete_this_message">Delete This Message</string>
    <string name="delete_history">Delete History</string>
    <string name="delete_history_message">Are you sure you want to delete this history?</string>
    <string name="delete_history_by_contact">Are you sure you want to delete all histories of this contact?</string>
    <string name="today">Today</string>
    <string name="manage">Quick Dial Manage</string>

    <string name="quick_call_splash_text">Quick Dial</string>
    <string name="quick_call_splash_text2">Sliding by your finger</string>
    <string name="quick_call_copyright_text">Copyright &#169; 2014 CoBeOpen, Inc.</string>
    
    <string name="quick_call_create_new">Create New Quick Dial</string>
    <string name="quick_call_info">Quick Dial Info</string>
    <string name="quick_call_manage">Manage Quick Dial</string>
    
    <string name="button_reset">Reset</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    
    <string name="dialog_exist_title">This quick dial is exist</string>
    <string name="dialog_exist_msg">This quick dial has been occupied by contact(%1$s).</string>
    
    <string name="dialog_quick_call_title">Start Call</string>
    <string name="dialog_quick_call_msg">Call contact (%1$s) immediately?</string>
    <string name="call">call</string>
    
    <string name="settings_suggestions">Feedback</string>
	<string name="settings_rate_app">Rate App</string>
	<string name="settings_about_quick_call">About Quick Dial</string>
	<string name="title_suggestions">Feedback</string>
	<string name="hint_reply">Please input your suggestions or questions.</string>
	<string name="hint_reply_info">Please input your mail or phone.(Optional)</string>	
	<string name="submit">Submit</string>
	<string name="cannot_submit">Cannot Submit</string>
	<string name="call_error_message_network_error">Network unavailable. Please try again later.</string>
	<string name="submit_suggestion_failed">Sorry, submit suggestion failed.</string>
	<string name="submit_suggestion_success">Submit suggestion success.</string>
	
	<string name="contact_us">Contact Us</string>
	<string name="contact_us_name">Name : Gavin Zhuang</string>
	<string name="contact_us_email">Email : zjc3909@163.com</string>
	<string name="contact_us_phone">Phone : +86 18606004265</string>
	<string name="contact_us_qq">QQ : 122429471</string>
	<string name="contact_us_address">Address : Soft Park II, Xiamen, Fujian, China</string>
	
	<string name="home_bottom_quick_call">Quick Dials</string>
	<string name="home_bottom_call_log">Call Logs</string>
	<string name="home_bottom_contacts">Contacts</string>
	<string name="home_bottom_settings">Settings</string>
	
	<string name="this_number_has_been_set">This number has already been saved in quick dial.</string>
	
	<string name="popup_text_delete_this_contact">Delete This Contact</string>
	<string name="popup_text_edit_this_contact">Edit This Contact</string>
	<string name="popup_text_create_new_quick_call">Create New Quick Dial</string>
	
	<string name="save_first">You must save this number in your native contact first.</string>
	
</resources>