<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginTop="17dp"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_app_splash" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black_color"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/app_version"
                    android:textColor="@color/gray_color"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/settings_suggestions_view"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/bg_dialog_button"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:padding="9dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_settings_suggestions" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/settings_suggestions"
                    android:textColor="@color/home_item_deep_color"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_right_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings_rate_app_view"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_dialog_button"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:padding="9dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_settings_rate_app" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/settings_rate_app"
                    android:textColor="@color/home_item_deep_color"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_right_arrow" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="17dp"
            android:text="@string/contact_us"
            android:textColor="@color/home_text_deep_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_name"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_email"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_phone"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_qq"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_address"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>