<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="30dp"
        android:text="@string/guide_title3"
        android:textColor="@color/gray_white_color"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="7dp"
        android:text="@string/guide_content3"
        android:textColor="@color/gray_white_color"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginTop="17dp"
            android:background="@null"
            android:scaleType="fitStart"
            android:src="@drawable/first_login_guide_img03" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="27dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="27dp"
                android:paddingRight="27dp"
                android:text="@string/start"
                android:textColor="@color/white_orange_color"
                android:textSize="16sp" 
                android:textStyle="bold"
                android:layout_marginRight="17dp"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>