<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_home_popup_window"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/button_popup_create_new_quick_call"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_home_popup_item_with_line"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_home_popup_create_new_quick" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="7dp"
            android:gravity="center_vertical"
            android:text="@string/popup_text_create_new_quick_call"
            android:textColor="@color/home_popup_text_color"
            android:textSize="14sp" />
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/button_popup_edit_contact"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_home_popup_item_with_line"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_home_popup_create_new_card" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="7dp"
            android:gravity="center_vertical"
            android:text="@string/popup_text_edit_this_contact"
            android:textColor="@color/home_popup_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_popup_delete_contact"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_home_popup_item"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_home_popup_delete" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="7dp"
            android:gravity="center_vertical"
            android:text="@string/popup_text_delete_this_contact"
            android:textColor="@color/home_popup_text_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>